feat: Zod validations

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,9 @@
 org: myselfdev97
 service: foodiary-api
 
+plugins:
+  - serverless-offline
+
 provider:
   name: aws
   region: us-east-1
@@ -17,13 +20,13 @@ build:
 
 functions:
   signin:
-    handler: src/signin.handler
+    handler: src/functions/signin.handler
     events:
       - httpApi:
           path: /signin
           method: POST
   signup:
-    handler: src/signin.handler
+    handler: src/functions/signup.handler
     events:
       - httpApi:
           path: /signup
