feat: Create database connection with Neon and schema with tables (Plus: Encrypt user password with BCrypt nad compare to Sign In)

--- a/serverless.yml
+++ b/serverless.yml
@@ -9,14 +9,15 @@ provider:
   region: us-east-1
   runtime: nodejs20.x
   architecture: arm64
+  environment:
+    DATABASE_URL: ${env:DATABASE_URL}
 
 package:
   individually: true
 
 build:
-  esbuild:
-    minify: true
-    sourcemap: false
+  minify: true
+  sourcemap: false
 
 functions:
   signin:
